# Otus_Py_Bs_2021_hw

./: .gitignore  README.md  otus_hw.code-workspace  pyproject.toml  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile
homework_03/web-app/: main.py  pyproject.toml
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
practice_06/: README.md  main.py
