[tool.poetry]
name = "otus_py_bs_2021_hw"
version = "0.1.0"
description = ""
authors = ["Sergey-Dubovsky <85638802+Sergey-Dubovsky@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aiohttp = "^3.7.4"
ujson = "^4.1.0"
SQLAlchemy = "^1.4.23"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
