[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Sergey-Dubovsky <85638802+Sergey-Dubovsky@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
